--- a/App_Reto1/App_Reto1/App_Reto1.csproj
+++ b/App_Reto1/App_Reto1/App_Reto1.csproj
@@ -67,9 +67,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="estilos\estilos.css" />
+    <Content Include="frm_registro.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm_registro.aspx.cs">
+      <DependentUpon>frm_registro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frm_registro.aspx.designer.cs">
+      <DependentUpon>frm_registro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
