--- a/App_Reto1/App_Reto1/App_Reto1.csproj
+++ b/App_Reto1/App_Reto1/App_Reto1.csproj
@@ -72,6 +72,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cls_conexion.cs" />
+    <Compile Include="cls_credito.cs" />
     <Compile Include="frm_registro.aspx.cs">
       <DependentUpon>frm_registro.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
